# guardian_surveillance

./: CMakeLists.txt  README.md  package.xml
config/: user_info.yaml
include/guardian_surveillance/: twilio.hh
launch/: .camera_test.launch.swp  camera_view.launch  guardian_surveillance.launch  surveillance_system.launch
msg/: Object.msg
scripts/: .email_alerter_node.swp  email_alert_node  email_alerter_node  email_alerter_node.py  faces.xml  intruder_alerter_node  intruder_alerter_node.py  test.py  test_node  text_alerter_node  text_alerter_node.py
src/: cpp_demo.cc  image_processing_node.cpp  image_processor_node.cpp  intruder_alerter_node.cpp  intruder_detect_node.cpp  intruder_detecter_node.cpp  text_alert_node.cpp  twilio.cc
