<?xml version="1.0"?>
<package format="2">
  <name>guardian_surveillance</name>
  <version>0.0.0</version>
  <description>A ROS package containing a lightweight and intelligent surveillence system embedded on the Raspberry Pi 4 Model B and implemented in the ROS ecosystem.</description>

  <maintainer email="joeyyang.ai@gmail.com">Joey Yang</maintainer>
  <author email="joeyyang.ai@gmail.com">Joey Yang</author>

  <license>BSD</license>
  
  <url type="website">https://joeyjyyang.github.io</url>
  <url type="github">https://github.com/joeyjyyang</url>
  <url type="repository">https://github.com/joeyjyyang/guardian_surveillance</url>
  <url type="linkedin">https://www.linkedin.com/in/joey-yang</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>cv_bridge</build_depend>
 
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>raspicam_node</exec_depend>
  <exec_depend>image_view</exec_depend>
</package>
